  14.3.0   E norm -b, norm -i      gain -B, gain -en       2010-06-14
  14.3.0   E filter                ~=sinc                  2010-06-14
  14.1.0   E resample alias        rate                    2010-06-14
  14.1.0   E polyphase alias       rate                    2010-06-14
  14.1.0   E rabbit alias          rate                    2010-06-14

LibSoX interface changes:

File formats:

Audio device drivers:

  o Add native windows audio output driver. (Pavel Karneliuk)

Effects:

  o Fix [2254919] Silence doesn't trim digital silence correctly.  (robs)

Other new features:

  o Added libSoX example #4: concatenating audio files.  (robs)

Other bug fixes:

  o Fix build so that grouped files (e.g. play -r 6k "*.vox" plays all
    at 6k) works.  (robs)
  o Fix simultaneous play & rec not working.  (robs)

Internal improvements:


sox-14.3.0	2009-06-14
----------

Previously deprecated features that have been removed in this release:

  Deprec-  Feature    [O(ption)]
  ated in  [F(ormat)] [E(ffect)]   Replacement
  -------  ----------------------  ----------------------
  14.1.0   E resample *            ~= rate
  14.1.0   E polyphase *           ~= rate
  14.1.0   E rabbit *              ~= rate
  14.2.0   E dither: RPDF,scaled   dither (TPDF only)
  14.1.0   F flac: libFLAC 1.1.1   libFLAC > 1.1.1

  * But interface retained as an alias for `rate'.

LibSoX interface changes:

  o sox_format_init() has been supeseded by sox_init().
  o Removed obsolete error codes (SOX_E...); new sox_strerror()
    function to convert error codes to text.
  o Use of sox_effect_options() is now mandatory when initialising an
    effect (see example0.c for an example of this).
  o sox_flow_effects() has a new (3rd) parameter: a void pointer
    `client_data' that is passed as a new (2nd) parameter to the flow
    callback function.  client_data may be NULL.

File formats:

  o Slight improvement to A-law/u-law conversion accuracy: round LSB
    instead of truncating.  (robs)